working on the first three sections

--- a/index.html
+++ b/index.html
@@ -36,16 +36,19 @@
             <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+            <li class="contact-button"><a href="#">Contact</a></li>
           </ul>
         </div>
       </nav>
       <div class="container hero"><h2>We are creatives</h2></div>
     </header>
     <main>
-      <section>
-        <div class="">
-          <h3>Transform your brand</h3>
+      <section class="container cta__section">
+        <div class="cta__section--wrapper">
+          <h3>
+            Transform your <br />
+            brand
+          </h3>
           <p>
             We are a full-service creative agency specializing in helping brands
             grow fast. Engage your clients through compelling visuals that do
@@ -53,11 +56,15 @@
           </p>
           <a href="#"> Learn more</a>
         </div>
-        <div class=""></div>
+        <div class="egg__bg"></div>
       </section>
-      <section>
-        <div class="">
-          <h3>Stand out to the right audience</h3>
+      <section class="container cta__section">
+        <div class="cup__bg"></div>
+        <div class="cta__section--wrapper">
+          <h3>
+            Stand out to the right <br />
+            audience
+          </h3>
           <p>
             Using a collaborative formula of designers, researchers,
             photographers, videographers, and copywriters, we’ll build and
@@ -65,10 +72,9 @@
           </p>
           <a href="#">Learn more</a>
         </div>
-        <div class=""></div>
       </section>
-      <section>
-        <div class="">
+      <section class="services__section">
+        <div class="graphic__section">
           <h4>Graphic design</h4>
           <p>
             Great design makes you memorable. We deliver artwork that
