--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       href="./images/favicon-32x32.png"
     />
 
-    <link rel="stylesheet" href="./src/styles/style.css" />
     <link
       rel="stylesheet"
-      href="./src/styles/mobile.css"
-      media="(max-width: 376px)"
+      href="./src/styles/desktop.css"
+      media="(min-width: 1024px)"
     />
+    <link rel="stylesheet" href="./src/styles/style.css" />
 
     <title>Frontend Mentor | Sunnyside agency landing page</title>
 
@@ -146,7 +146,7 @@
           </div>
         </div>
       </section>
-      <section class="container works__section">
+      <section class="works__section">
         <div class="work">
           <img
             src="./src/images/desktop/image-gallery-milkbottles.jpg"
