finishing header cta section service section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <main>
       <section class="cta__section">
-        <div class="container cta__section--wrapper">
+        <div class="cta__section--wrapper">
           <h3>
             Transform your <br />
             brand
@@ -66,10 +66,8 @@
           <a href="#"> Learn more</a>
         </div>
         <div class="egg__bg top"></div>
-      </section>
-      <section class="cta__section">
         <div class="cup__bg"></div>
-        <div class="container cta__section--wrapper">
+        <div class="cta__section--wrapper">
           <h3>
             Stand out to the right <br />
             audience
