--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       <nav>
         <div class="container">
           <img src="./src/images/logo.svg" alt="Logo Sunnyside" />
+          <img src="./src/images/icon-hamburger.svg" alt="Logo Sunnyside" />
+
           <ul>
             <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
@@ -48,6 +50,7 @@
       <div class="hero">
         <div class="container">
           <h2>We are creatives</h2>
+          <img src="./src/images/icon-arrow-down.svg" alt="Logo Sunnyside" />
         </div>
       </div>
     </header>
@@ -63,7 +66,7 @@
             grow fast. Engage your clients through compelling visuals that do
             most of the marketing for you.
           </p>
-          <a href="#"> Learn more</a>
+          <a href="#" class="button button__underline--yellow"> Learn more</a>
         </div>
         <div class="egg__bg top"></div>
         <div class="cup__bg"></div>
@@ -77,7 +80,7 @@
             photographers, videographers, and copywriters, we’ll build and
             extend your brand in digital places.
           </p>
-          <a href="#">Learn more</a>
+          <a href="#" class="button button__underline--red">Learn more</a>
         </div>
       </section>
       <section class="services__section">
@@ -173,10 +176,16 @@
           fill-rule="nonzero"
         />
       </svg>
-      <ul>
+      <ul class="footer__list--menu">
         <li>About</li>
         <li>Services</li>
         <li>Projects</li>
+      </ul>
+      <ul class="footer__list--social">
+        <li><img src="./src/images/icon-facebook.svg" alt="facebook" /></li>
+        <li><img src="./src/images/icon-instagram.svg" alt="instagram" /></li>
+        <li><img src="./src/images/icon-twitter.svg" alt="twitter" /></li>
+        <li><img src="./src/images/icon-pinterest.svg" alt="pinterest" /></li>
       </ul>
       <div class="attribution">
         Challenge by
