--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       href="./images/favicon-32x32.png"
     />
 
+    <link rel="stylesheet" href="./src/styles/style.css" />
     <link
       rel="stylesheet"
       href="./src/styles/desktop.css"
       media="(min-width: 1024px)"
     />
-    <link rel="stylesheet" href="./src/styles/style.css" />
 
     <title>Frontend Mentor | Sunnyside agency landing page</title>
 
@@ -55,7 +55,7 @@
       </div>
     </header>
     <main>
-      <section class="cta__section">
+      <section class="container cta__section">
         <div class="cta__section--wrapper">
           <h3>
             Transform your <br />
