--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
       <nav>
         <div class="container">
           <img src="./src/images/logo.svg" alt="Logo Sunnyside" />
-          <img src="./src/images/icon-hamburger.svg" alt="Logo Sunnyside" />
+          <img
+            src="./src/images/icon-hamburger.svg"
+            alt="Logo Sunnyside"
+            class="mobile__menu--icon"
+          />
 
           <ul>
             <li><a href="#">About</a></li>
@@ -83,7 +87,7 @@
           <a href="#" class="button button__underline--red">Learn more</a>
         </div>
       </section>
-      <section class="services__section">
+      <section class="container services__section">
         <div class="graphic__section">
           <div class="container services__section--wrapper">
             <h4>Graphic design</h4>
@@ -110,8 +114,8 @@
           <div class="client__section--testimonial">
             <img src="./src/images/image-emily.jpg" alt="client picture" />
             <p class="client__section--testimonial-text">
-              We put our trust in Sunnyside and they<br />delivered, making sure
-              our needs were met<br />and deadlines were always hit.
+              We put our trust in Sunnyside and they delivered, making sure our
+              needs were met and deadlines were always hit.
             </p>
             <div class="client__section--description">
               <p class="client__section--description-name">Emily R.</p>
@@ -123,9 +127,8 @@
           <div class="client__section--testimonial">
             <img src="./src/images/image-thomas.jpg" alt="client picture" />
             <p class="client__section--testimonial-text">
-              Sunnyside’s enthusiasm coupled with their<br />keen interest in
-              our brand’s success made it<br />a satisfying and enjoyable
-              experience.
+              Sunnyside’s enthusiasm coupled with their been interest in our
+              brand’s success made it a satisfying and enjoyable experience.
             </p>
             <div class="client__section--description">
               <p class="client__section--description-name">Thomas S.</p>
@@ -137,8 +140,8 @@
           <div class="client__section--testimonial">
             <img src="./src/images/image-jennie.jpg" alt="client picture" />
             <p class="client__section--testimonial-text">
-              Incredible end result! Our sales increased<br />over 400% when we
-              worked with Sunnyside.<br />Highly recommended!
+              Incredible end result! Our sales increased over 400% when we
+              worked with Sunnyside. Highly recommended!
             </p>
             <div class="client__section--description">
               <p class="client__section--description-name">Jennie F.</p>
@@ -147,7 +150,7 @@
           </div>
         </div>
       </section>
-      <section class="works__section">
+      <section class="container works__section">
         <div class="work">
           <img
             src="./src/images/desktop/image-gallery-milkbottles.jpg"
