working in the tablet version

--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
     />
 
     <link rel="stylesheet" href="./src/styles/style.css" />
+
+    <link
+      rel="stylesheet"
+      href="./src/styles/tablet.css"
+      media="(min-width: 426px)"
+    />
     <link
       rel="stylesheet"
       href="./src/styles/desktop.css"
-      media="(min-width: 1024px)"
+      media="(min-width: 764px)"
     />
 
     <title>Frontend Mentor | Sunnyside agency landing page</title>
